--- a/package.json
+++ b/package.json
@@ -251,7 +251,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --color"
+    "build": "webpack --color",
+    "watch": "webpack --prpgrass --watch",
+    "start": "webpack-dev-server --open --inline"
   },
   "repository": {
     "type": "git",
