--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "csv-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0",
     "xml-loader": "^1.2.1"
   },
   "name": "webpack-demo",
@@ -251,7 +255,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --color",
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js --color",
     "watch": "webpack --prpgrass --watch",
     "start": "webpack-dev-server --open --inline"
   },
