--- a/webpack/package.json
+++ b/webpack/package.json
@@ -17,6 +17,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "postcss-loader": "^2.0.10",
     "press": "^0.1.1",
     "style-loader": "^0.19.1",
