--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commitlint": "^8.2.0",
     "conventional-changelog-cli": "^2.0.23",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "husky": "^3.0.5",
     "lodash": "^4.17.15",
     "style-loader": "^1.0.0",
