--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "commitlint": "^8.2.0",
     "conventional-changelog-cli": "^2.0.23",
     "css-loader": "^3.2.0",
+    "csv-loader": "^3.0.2",
     "file-loader": "^4.2.0",
     "husky": "^3.0.5",
     "lodash": "^4.17.15",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "xml-loader": "^1.2.1"
   },
   "husky": {
     "hooks": {
